--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/src/config/data.js
+# /src/config/data.js
 
 # Prebuilt gitconfig
 # See http://help.github.com/ignore-files/ for more about ignoring files.
